tests/rt/pos/ifc/deadarg.picox
let fun foo x = let val _ = printWithLabels x
                    val _ = printWithLabels "hi" 
                in () 
                end 
    val s = 42 raisedTo {alice} 
in 
   foo s 
end 
